logout redirect home

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,7 +24,7 @@ security:
             logout:
                 path: app_logout
                 # where to redirect after logout
-                target: home
+                target: /
             remember_me:
                 secret: '%kernel.secret%'
                 lifetime: 31536000
