--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -41,7 +41,7 @@ security:
     access_control:
         - { path: ^/app_register, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
-    role_hierarchy:
-        ROLE_ADMIN: ROLE_EDITOR
-        ROLE_ORGANISATEUR : ROLE_USER
-        ROLE_PARTICIPANT: ROLE_USER
+#    role_hierarchy:
+#        ROLE_ADMIN: ROLE_EDITOR
+#        ROLE_ORGANISATEUR : ROLE_USER
+#        ROLE_PARTICIPANT: ROLE_USER
