--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -1,8 +1,7 @@
-vich_uploader:
-    db_driver: orm
-
-    mappings:
-        profilPicture:
-            uri_prefix: /IMAGES/profilPicture
-            upload_destination: '%kernel.project_dir%/public/IMAGES/profilPicture'
-            namer: Vich\UploaderBundle\Naming\UniqidNamer
+#vich_uploader:
+#    db_driver: orm
+#
+#    mappings:
+#        profilPicture:
+#            uri_prefix: /IMAGES/profilPicture
+#            upload_destination: '%kernel.project_dir%/public/IMAGES/profilPicture'
