Resolution modifier profil

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -28,6 +28,7 @@ security:
             remember_me:
                 secret: '%kernel.secret%'
                 lifetime: 31536000
+                remember_me_parameter : _remember_me
             access_denied_handler: App\Security\AccessDeniedHandler
 
             # activate different ways to authenticate
